--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header{
 }
 .line-info_header{
 	height:15px;
-	background-image:url(../images/linear.png);
+	background-image:url(images/linear.png);
 	background-repeat:repeat-x;
 	opacity:0.3;
 }
@@ -130,6 +130,7 @@ header{
 	padding:0;
 	justify-content:space-around;
 	align-items:center;
+	background-color:rgb(1, 1, 36);
 	border:none;
 }
 .circle_img{
@@ -141,7 +142,7 @@ header{
 	padding:0;
 	width:233px;
 	height:600px;
-	background-image:url(../images/cirkle1.png);
+	background-image:url(images/cirkle1.png);
 	background-position:top center;
 	background-repeat:no-repeat;
 	animation:pendulum 15s ease-in-out;
@@ -163,7 +164,7 @@ header{
 }
 .slider_header img{
 	margin:0;
-	margin-bottom:-4px;
+	margin-bottom:-6px;
 	padding:0;
 }
 .header_navigation{
@@ -177,6 +178,7 @@ header{
 	position:relative;
 	display:block;
 	margin-bottom:20px;
+	text-transform:uppercase;
 }
 .header_navigation ul li a{
 	position:relative;
@@ -272,11 +274,12 @@ span.top_slogan,span.bottom_slogan{
 	margin:0 auto;
 	padding:0.25em 0 0.325em;
 	font-size:5rem;
-	font-family:'Roboto Condensed', sans-serif;
+	/*font-family:'Roboto Condensed', sans-serif;
+	font-style: normal;*/
 	text-transform:uppercase;
 	letter-spacing:7px;
 	text-shadow:0 0 80px rgba(255, 255, 255, .5);
-	background:url(../images/clip.png) repeat-y;
+	background:url(images/clip.png) repeat-y;
 	-webkit-background-clip:text;
 	background-clip:text;
 	-webkit-text-fill-color:transparent;
@@ -320,7 +323,7 @@ span.top_slogan,span.bottom_slogan{
 	height:150px;
 	width:118px;
 	position:relative;
-	background:url(../images/map.png) no-repeat;
+	background:url(images/map.png) no-repeat;
 	box-sizing:border-box;
 	overflow:hidden;
 }
@@ -460,7 +463,7 @@ span.top_slogan,span.bottom_slogan{
 }
 .description_advertasment-header{
 	position:absolute;
-	top:45px;
+	top:55px;
 	left:0;
 	color:white;
 }
@@ -476,7 +479,9 @@ span.top_slogan,span.bottom_slogan{
 	margin-left:20px;
 	width:400px;
 	font-size:1.1rem;
-	font-family:'Play', sans-serif;
+	font-family:'Roboto Condensed', sans-serif;
+	font-style: italic;
+	letter-spacing:0.05rem;
 	color:white;
 }
 .description_line-header p:first-child{
