--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header{
 }
 .line-info_header{
 	height:15px;
-	background-image:url(images/linear.png);
+	background-image:url(../images/linear.png);
 	background-repeat:repeat-x;
 	opacity:0.3;
 }
@@ -142,7 +142,7 @@ header{
 	padding:0;
 	width:233px;
 	height:600px;
-	background-image:url(images/cirkle1.png);
+	background-image:url(../images/cirkle1.png);
 	background-position:top center;
 	background-repeat:no-repeat;
 	animation:pendulum 15s ease-in-out;
@@ -274,12 +274,12 @@ span.top_slogan,span.bottom_slogan{
 	margin:0 auto;
 	padding:0.25em 0 0.325em;
 	font-size:5rem;
-	/*font-family:'Roboto Condensed', sans-serif;
-	font-style: normal;*/
+	font-family:'Roboto Condensed', sans-serif;
+	font-style: normal;
 	text-transform:uppercase;
 	letter-spacing:7px;
 	text-shadow:0 0 80px rgba(255, 255, 255, .5);
-	background:url(images/clip.png) repeat-y;
+	background:url(../images/clip.png) repeat-y;
 	-webkit-background-clip:text;
 	background-clip:text;
 	-webkit-text-fill-color:transparent;
@@ -323,7 +323,7 @@ span.top_slogan,span.bottom_slogan{
 	height:150px;
 	width:118px;
 	position:relative;
-	background:url(images/map.png) no-repeat;
+	background:url(../images/map.png) no-repeat;
 	box-sizing:border-box;
 	overflow:hidden;
 }
